--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -101,7 +101,7 @@ border: 2px solid #aaaaaa;
 <body>
 <h2 style="color:#FF00FF; font-family: helvetica narrow, sans-serif; position:absolute; top:0; left:0;">barterNFT</h2>
 <button style="color:#FF00FF; font-family: helvetica narrow, sans-serif; width: 100px; height: 25px;  position:absolute; top:0; right:0;" onclick="open_window()"">offer trade</button>
-<p id="contract_address_ID" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; font-weight:200; position:absolute; top:35; left:0;"></p>
+<p id="contract_address_ID" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: small; font-weight:200; position:absolute; top:35; left:0;"></p>
 
 	
 </div>
@@ -1091,7 +1091,7 @@ var display = (async function(){
 	newDiv.id = 'r'+i;
 	chat.appendChild(newDiv);
 	
-	document.getElementById("r" + i).innerHTML = "account address: " + address;
+	document.getElementById("r" + i).innerHTML = "" //"account address: " + address;
 	var contract_length = await contract_bal.methods.token_contracts_list1xyCount(i, address).call();
 	for (j=0;j<contract_length;j++){
 	var contract_ID1 = await contract_bal.methods.token_contracts_list1xy(i, address, j).call();
@@ -1771,48 +1771,7 @@ if (i > 80){
 
 
 
-function setvalue(){
-	
-q = $('input[name=drone]:checked').val();
-var nonce = (async function(){
-  	var contract_address = await web3.utils.toChecksumAddress("0xd284f2833f82732fe68be0be55ce279e5421bb19")
-  	var wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
-	
-	
-	//alert(data)
-	
-	var result = await web3.eth.getTransactionCount(wallet_address)
-  
-	console.log('Woo done!', result)
-  
-	_nonce = result
-  
-	//alert(_nonce)
-	//var data = await new web3.eth.Contract(abi, contract_address).methods.set_value(web3.utils.toHex(1)).call();
-//var data = (async function(){	
-	var _data = new web3.eth.Contract(abi, contract_address).methods.setfee(2000000).encodeABI();
-  	//alert(_data)
-	//})()
-	var txn_dict = {'gas': web3.utils.toHex(40000),'gasPrice': web3.utils.toHex(web3.utils.toWei('40', 'gwei')), 'from': wallet_address, 'to': contract_address, 'nonce': web3.utils.toHex(_nonce),'data': _data}
-  	//alert(txn_dict['nonce'])
-	
-  
-	var tx = await new ethereumjs.Tx(txn_dict, {chain:'ropsten'})
 
-	//tx.sign(private_key)
-
-	var serializedTx = await tx.serialize();
-
-	var raw = '0x' + serializedTx.toString('hex')
-
-	var transaction = await web3.eth.sendSignedTransaction(raw, (err, tx) => {
-	web3.eth.transactionPollingTimeout = 2000;
-	console.log(tx)
-	})
-
-
-})()
-}
 
           
     </script>
