--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -1086,7 +1086,7 @@ var display = (async function(){
 	var newDiv = document.createElement('div');
 	newDiv.id = 'q'+i;
 	chat.appendChild(newDiv);
-	document.getElementById("q" + i).innerHTML = "offer no: " + i //-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------";
+	document.getElementById("q" + i).innerHTML = '<center style="color:grey; font-family: helvetica narrow, sans-serif; font-size:20px;">&#8645;</center>' + " offer no: " + i //-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------";
 	var newDiv = document.createElement('div');
 	newDiv.id = 'r'+i;
 	chat.appendChild(newDiv);
