--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -1734,7 +1734,7 @@ var val = (async function(){
   var bal = await contract_bal.methods.name.call();
   //alert(bal);
   //var result = await getvalue()
-  //console.log('Woo done!', result)
+  console.log('Woo done!', bal)
  
 	
 
