--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -1733,7 +1733,7 @@ var val = (async function(){
   var contract_bal = await new web3.eth.Contract(abi, contract_address);
   var bal = await contract_bal.methods.name.call();
   //alert(bal);
-  //var result = await getvalue()
+  var result = await getName()
   console.log('Woo done!', bal)
  
 	
