--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -93,6 +93,13 @@ border: 2px solid #aaaaaa;
 
 }
 
+box {
+  width: 300px;
+  border: 15px solid green;
+  padding: 50px;
+  margin: 20px;
+}
+
 
 </style>
 </head>
@@ -1073,7 +1080,7 @@ var display = (async function(){
 	var last = parseInt(num) + 1
 	console.log("last: " + last);
 	
-	
+	var box
 	
 	//for (var i = 0; i<addressCount; i++){
 	for (var i = addressCount; i>0; i--){
@@ -1083,7 +1090,7 @@ var display = (async function(){
 	var chat = document.getElementById("contract_address_ID"); // finds the container
 	
 	
-	var newDiv = document.createElement('table');
+	var newDiv = document.createElement('box');
 	newDiv.id = 'q'+i;
 	chat.appendChild(newDiv);
 	document.getElementById("q" + i).innerHTML = '<center style="color:grey; font-family: helvetica narrow, sans-serif; font-size:20px;">&#8645;</center>' + " offer no: " + i //-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------";
