--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -93,7 +93,7 @@ border: 2px solid #aaaaaa;
 
 }
 
-contract_address_ID {
+div {
   width: 300px;
   border: 15px solid green;
   padding: 50px;
@@ -1090,10 +1090,10 @@ var display = (async function(){
 	var chat = document.getElementById("contract_address_ID"); // finds the container
 	//var chat = document.getElementById("box");
 	
-	var newDiv = document.createElement('div');
-	newDiv.id = 'q'+i;
-	chat.appendChild(newDiv);
-	document.getElementById("q" + i).innerHTML = '<center style="color:grey; font-family: helvetica narrow, sans-serif; font-size:20px;">&#8645;</center>' + " offer no: " + i //-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------";
+	//var newDiv = document.createElement('div');
+	//newDiv.id = 'q'+i;
+	//chat.appendChild(newDiv);
+	//document.getElementById("q" + i).innerHTML = '<center style="color:grey; font-family: helvetica narrow, sans-serif; font-size:20px;">&#8645;</center>' + " offer no: " + i //-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------";
 	
 	var newDiv = document.createElement('div');
 	newDiv.id = 'r'+i;
