--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -1108,7 +1108,7 @@ var display = (async function(){
 	console.log(name)
 	var newDiv = document.createElement('div');
 	newDiv.id = 'rr'+i + j;
-	chat.appendChild(newDiv);
+	newDiv.appendChild(newDiv);
 	
 	
 	
