--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -93,7 +93,7 @@ border: 2px solid #aaaaaa;
 
 }
 
-div {
+box {
   width: 300px;
   border: 15px solid green;
   padding: 50px;
@@ -1087,8 +1087,8 @@ var display = (async function(){
 	var address = await contract_bal.methods.address_list(i-1).call();
 	console.log("address: " + address);
 	console.log( i);
-	var chat = document.getElementById("contract_address_ID"); // finds the container
-	//var chat = document.getElementById("box");
+	//var chat = document.getElementById("contract_address_ID"); // finds the container
+	var chat = document.getElementById("box");
 	
 	//var newDiv = document.createElement('div');
 	//newDiv.id = 'q'+i;
@@ -1108,7 +1108,7 @@ var display = (async function(){
 	console.log(name)
 	var newDiv = document.createElement('div');
 	newDiv.id = 'rr'+i + j;
-	newDiv.appendChild(newDiv);
+	chat.appendChild(newDiv);
 	
 	
 	
