--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -1088,7 +1088,7 @@ var display = (async function(){
 	console.log("address: " + address);
 	console.log( i);
 	//var chat = document.getElementById("contract_address_ID"); // finds the container
-	var chat = document.getElementById("box");
+	var chat = document.createElement("box");
 	
 	//var newDiv = document.createElement('div');
 	//newDiv.id = 'q'+i;
