--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -1095,11 +1095,12 @@ var display = (async function(){
 	//chat.appendChild(newDiv);
 	//document.getElementById("q" + i).innerHTML = '<center style="color:grey; font-family: helvetica narrow, sans-serif; font-size:20px;">&#8645;</center>' + " offer no: " + i //-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------";
 	
-	var newDiv = document.createElement('div');
+	var newDiv = document.createElement('box');
 	newDiv.id = 'r'+i;
 	
 	chat.appendChild(newDiv);
 	document.getElementById("r" + i).innerHTML = "" //"account address: " + address;
+	
 	
 	var contract_length = await contract_bal.methods.token_contracts_list1xyCount(i, address).call();
 	for (j=0;j<contract_length;j++){
