--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -94,7 +94,7 @@ border: 2px solid #aaaaaa;
 }
 
 box {
-  width: 300px;
+  width: 1000px;
   border: 15px solid green;
   padding: 50px;
   margin: 20px;
@@ -1095,7 +1095,7 @@ var display = (async function(){
 	//chat.appendChild(newDiv);
 	//document.getElementById("q" + i).innerHTML = '<center style="color:grey; font-family: helvetica narrow, sans-serif; font-size:20px;">&#8645;</center>' + " offer no: " + i //-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------";
 	
-	var newDiv = document.createElement('box');
+	var ewDiv = document.createElement('box');
 	newDiv.id = 'r'+i;
 	
 	chat.appendChild(newDiv);
@@ -1110,7 +1110,7 @@ var display = (async function(){
 	console.log(name)
 	var newDiv = document.createElement('div');
 	newDiv.id = 'rr'+i + j;
-	chat.appendChild(newDiv);
+	ewDiv.appendChild(newDiv);
 	
 	
 	
