--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -1096,9 +1096,9 @@ var display = (async function(){
 	//document.getElementById("q" + i).innerHTML = '<center style="color:grey; font-family: helvetica narrow, sans-serif; font-size:20px;">&#8645;</center>' + " offer no: " + i //-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------";
 	
 	var ewDiv = document.createElement('box');
-	newDiv.id = 'r'+i;
+	ewDiv.id = 'r'+i;
 	
-	chat.appendChild(newDiv);
+	chat.appendChild(ewDiv);
 	document.getElementById("r" + i).innerHTML = "" //"account address: " + address;
 	
 	
