--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -95,9 +95,10 @@ border: 2px solid #aaaaaa;
 
 box {
   width: 1000px;
+  height: 25px;
   border: 15px solid green;
-  padding: 50px;
-  margin: 20px;
+  //padding: 50px;
+  //margin: 20px;
 }
 
 
