--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -97,8 +97,8 @@ box {
   width: 50px;
   height: 50px;
   border: 15px solid green;
-  //padding: 50px;
-  //margin: 20px;
+  padding: 50px;
+  margin: 20px;
 }
 
 
