--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -1096,7 +1096,7 @@ var display = (async function(){
 	//chat.appendChild(newDiv);
 	//document.getElementById("q" + i).innerHTML = '<center style="color:grey; font-family: helvetica narrow, sans-serif; font-size:20px;">&#8645;</center>' + " offer no: " + i //-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------";
 	
-	var ewDiv = document.createElement('box');
+	var ewDiv = document.createElement('img');
 	//ewDiv.id = 'r'+i;
 	
 	chat.appendChild(ewDiv);
