--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -73,10 +73,18 @@ display: none;
   border: 2px solid #aaaaaa;
 }
 
-img {
+table {
 
 width: 500px;
 height: 100px;
+border: 2px solid #aaaaaa;
+
+}
+
+img {
+
+width: 50px;
+height: 50px;
 border: 2px solid #aaaaaa;
 
 }
@@ -1096,7 +1104,7 @@ var display = (async function(){
 	//chat.appendChild(newDiv);
 	//document.getElementById("q" + i).innerHTML = '<center style="color:grey; font-family: helvetica narrow, sans-serif; font-size:20px;">&#8645;</center>' + " offer no: " + i //-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------";
 	
-	var ewDiv = document.createElement('img');
+	var ewDiv = document.createElement('table');
 	//ewDiv.id = 'r'+i;
 	
 	chat.appendChild(ewDiv);
