--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -1089,7 +1089,7 @@ var display = (async function(){
 	var last = parseInt(num) + 1
 	console.log("last: " + last);
 	
-	var box
+	
 	
 	//for (var i = 0; i<addressCount; i++){
 	for (var i = addressCount; i>0; i--){
@@ -1132,7 +1132,7 @@ var display = (async function(){
 	console.log(contract_ID1)
 	
 	ewDiv.appendChild(newDiv);
-	document.getElementById("rr" + i + j).innerHTML = "their NFT Contract" + j + ": " + contract_ID1;
+	document.getElementById("rr" + i + j).innerHTML = "" // "their NFT Contract" + j + ": " + contract_ID1;
 	var tokenID = await contract_bal.methods.tokens_list1xy(i, address, j).call();
 	console.log(tokenID)
 	
@@ -1163,7 +1163,7 @@ var display = (async function(){
 			 image_ = 'https://ipfs.io/ipfs/' + JSONresult.image.slice(7)
 			}
             img.src = image_
-            chat.appendChild(img);
+            ewDiv.appendChild(img);
 			
 			<!-- //var el = document.createElement('html'); -->
 			<!-- //e.innerHTML = result -->
@@ -1190,9 +1190,9 @@ var display = (async function(){
 	
 	var newDiv = document.createElement('div');
 	newDiv.id = 's'+i + j;
-	chat.appendChild(newDiv);
+	ewDiv.appendChild(newDiv);
 	
-	document.getElementById("s" + i + j).innerHTML = "NFT Token ID1: " + tokenID;
+	document.getElementById("s" + i + j).innerHTML = name //"NFT Token ID1: " + tokenID;
 	//document.getElementById("contract_token_id").innerHTML = tokenID;
 	//document.write(account_address[0])
 	 }
