--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -1117,7 +1117,7 @@ var display = (async function(){
 	console.log(contract_ID1)
 	var name = await new web3.eth.Contract(abi, contract_ID1).methods.name().call();
 	console.log(name)
-	var ewDiv = document.createElement('table');
+	var newDiv = document.createElement('div');
 	//newDiv.id = 'rr'+i + j;
 	
 	
@@ -1131,7 +1131,7 @@ var display = (async function(){
 	//document.write(contract_ID)
 	console.log(contract_ID1)
 	
-	chat.appendChild(ewDiv);
+	ewDiv.appendChild(newDiv);
 	//document.getElementById("rr" + i + j).innerHTML = "" // "their NFT Contract" + j + ": " + contract_ID1;
 	var tokenID = await contract_bal.methods.tokens_list1xy(i, address, j).call();
 	console.log(tokenID)
