--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -1208,6 +1208,7 @@ var display = (async function(){
 	
 	var newDiv = document.createElement('div');
 	newDiv.id = 'ss'+i;
+	chat.appendChild(newDiv);
 	document.getElementById("ss" + i).outerHTML = '<center style="color:grey; font-family: helvetica narrow, sans-serif; font-size:50px;">&#8645;</center>'
 	var ewDiv = document.createElement('table');
 	
