--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -74,10 +74,10 @@ display: none;
 }
 
 table {
-
+border-radius: 25px;
 width: 500px;
 height: 100px;
-border: 2px solid #aaaaaa;
+border: 2px solid #FF00FF;
 
 }
 
@@ -85,7 +85,7 @@ img {
 
 width: 50px;
 height: 50px;
-border: 2px solid #aaaaaa;
+border: 2px solid #FF00FF;
 
 }
 
@@ -97,7 +97,7 @@ width: 100px;
 height: 25px;
 right:0;
 color:#FF00FF;
-border: 2px solid #aaaaaa;
+border: 2px solid #FF00FF;
 
 }
 
