--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -93,8 +93,7 @@ border: 2px solid #FF00FF;
 
 input {
 
-width: 100px;
-height: 25px;
+font-size: x-large
 right:0;
 color:#FF00FF;
 border: 2px solid #FF00FF;
