--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -93,7 +93,7 @@ border: 2px solid #FF00FF;
 
 input {
 
-font-size: x-large
+font-size: x-large;
 right:0;
 color:#FF00FF;
 border: 2px solid #FF00FF;
@@ -116,7 +116,7 @@ box {
 <body>
 <h2 style="color:#FF00FF; font-family: helvetica narrow, sans-serif; position:absolute; top:0; left:0;">barterNFT</h2>
 <button style="color:#FF00FF; font-family: helvetica narrow, sans-serif;font-size: x-large;  position:absolute; top:0; right:0;" onclick="open_window()"">offer trade</button>
-<p id="contract_address_ID" style="position:absolute; top:35; right:400;"></p>
+<p id="contract_address_ID" style="color:#FF00FF; font-family: helvetica narrow; position:absolute; top:35; right:400;"></p>
 
 	
 </div>
