--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -73,11 +73,19 @@ display: none;
   border: 2px solid #aaaaaa;
 }
 
+table {
+border-radius: 25px;
+width: 400px;
+height: 100px;
+border: 2px solid #FF00FF;
+
+}
+
 img {
 
 width: 50px;
 height: 50px;
-border: 2px solid #aaaaaa;
+border: 2px solid #FF00FF;
 
 }
 
@@ -85,12 +93,19 @@ border: 2px solid #aaaaaa;
 
 input {
 
-width: 100px;
-height: 25px;
+font-size: x-large;
 right:0;
 color:#FF00FF;
-border: 2px solid #aaaaaa;
+border: 2px solid #FF00FF;
 
+}
+
+box {
+  width: 50px;
+  height: 50px;
+  border: 15px solid green;
+  padding: 50px;
+  margin: -20px;
 }
 
 
@@ -100,8 +115,8 @@ border: 2px solid #aaaaaa;
 
 <body>
 <h2 style="color:#FF00FF; font-family: helvetica narrow, sans-serif; position:absolute; top:0; left:0;">barterNFT</h2>
-<button style="color:#FF00FF; font-family: helvetica narrow, sans-serif; width: 100px; height: 25px;  position:absolute; top:0; right:0;" onclick="open_window()"">offer trade</button>
-<p id="contract_address_ID" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: medium; font-weight:200; position:absolute; top:35; left:0;"></p>
+<button style="color:#FF00FF; font-family: helvetica narrow, sans-serif;font-size: x-large;  position:absolute; top:0; right:0;" onclick="open_window()"">offer trade</button>
+<p id="contract_address_ID" style="color:#FF00FF; font-family: helvetica narrow; position:absolute; top:35; right:400;"></p>
 
 	
 </div>
@@ -145,7 +160,7 @@ border: 2px solid #aaaaaa;
 //var pwd = document.getElementById("password").value;
 
 function open_window() {
-  var myWindow = window.open("create_nft_swap_form_polygonx_live.html", "offer trade", "width=600,height=800");
+  var myWindow = window.open("create_nft_swap_form_polygonx_live.html", "offer trade", "width=700,height=800");
 }             
 
 
@@ -1074,31 +1089,36 @@ var display = (async function(){
 	console.log("last: " + last);
 	
 	
-	var toAdd = document.createDocumentFragment();
+	
 	//for (var i = 0; i<addressCount; i++){
 	for (var i = addressCount; i>0; i--){
 	var address = await contract_bal.methods.address_list(i-1).call();
 	console.log("address: " + address);
 	console.log( i);
 	var chat = document.getElementById("contract_address_ID"); // finds the container
+	//var chat = document.createElement("box");
+	
+	//var newDiv = document.createElement('div');
+	//newDiv.id = 'q'+i;
+	//chat.appendChild(newDiv);
+	//document.getElementById("q" + i).innerHTML = '<center style="color:grey; font-family: helvetica narrow, sans-serif; font-size:20px;">&#8645;</center>' + " offer no: " + i //-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------";
+	
+	var ewDiv = document.createElement('table');
+	//ewDiv.id = 'r'+i;
+	
+	chat.appendChild(ewDiv);
+	//document.getElementById("r" + i).innerHTML = "" //"account address: " + address;
 	
 	
-	var newDiv = document.createElement('div');
-	newDiv.id = 'q'+i;
-	chat.appendChild(newDiv);
-	document.getElementById("q" + i).innerHTML = "offer no: " + i //-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------";
-	var newDiv = document.createElement('div');
-	newDiv.id = 'r'+i;
-	chat.appendChild(newDiv);
-	
-	document.getElementById("r" + i).innerHTML = "" //"account address: " + address;
 	var contract_length = await contract_bal.methods.token_contracts_list1xyCount(i, address).call();
 	for (j=0;j<contract_length;j++){
 	var contract_ID1 = await contract_bal.methods.token_contracts_list1xy(i, address, j).call();
 	console.log(contract_ID1)
+	var name = await new web3.eth.Contract(abi, contract_ID1).methods.name().call();
+	console.log(name)
 	var newDiv = document.createElement('div');
-	newDiv.id = 'rr'+i + j;
-	chat.appendChild(newDiv);
+	//newDiv.id = 'rr'+i + j;
+	
 	
 	
 	
@@ -1109,8 +1129,9 @@ var display = (async function(){
 	
 	//document.write(contract_ID)
 	console.log(contract_ID1)
-	document.getElementById("rr" + i + j).innerHTML = "their NFT Contract" + j + ": " + contract_ID1;
 	
+	ewDiv.appendChild(newDiv);
+	//document.getElementById("rr" + i + j).innerHTML = "" // "their NFT Contract" + j + ": " + contract_ID1;
 	var tokenID = await contract_bal.methods.tokens_list1xy(i, address, j).call();
 	console.log(tokenID)
 	
@@ -1141,7 +1162,7 @@ var display = (async function(){
 			 image_ = 'https://ipfs.io/ipfs/' + JSONresult.image.slice(7)
 			}
             img.src = image_
-            chat.appendChild(img);
+            ewDiv.appendChild(img);
 			
 			<!-- //var el = document.createElement('html'); -->
 			<!-- //e.innerHTML = result -->
@@ -1168,9 +1189,9 @@ var display = (async function(){
 	
 	var newDiv = document.createElement('div');
 	newDiv.id = 's'+i + j;
-	chat.appendChild(newDiv);
+	ewDiv.appendChild(newDiv);
 	
-	document.getElementById("s" + i + j).innerHTML = "NFT Token ID1: " + tokenID;
+	document.getElementById("s" + i + j).innerHTML = name //"NFT Token ID1: " + tokenID;
 	//document.getElementById("contract_token_id").innerHTML = tokenID;
 	//document.write(account_address[0])
 	 }
@@ -1187,7 +1208,10 @@ var display = (async function(){
 	var newDiv = document.createElement('div');
 	newDiv.id = 'ss'+i;
 	chat.appendChild(newDiv);
-	document.getElementById("ss" + i).outerHTML = '<center style="color:grey; font-family: helvetica narrow, sans-serif; font-size:50px;">&#8645;</center>'
+	document.getElementById("ss" + i).outerHTML = '<p style="color:grey; font-family: helvetica narrow, sans-serif; font-size:50px position:absolute; top:0; right:200;">&#10552;</p>'
+	var ewDiv = document.createElement('table');
+	
+	chat.appendChild(ewDiv);
 	for (j=0;j<contract_length1;j++){ 
 	
 	var contract_ID2 = await contract_bal.methods.token_contracts_list2xy(i, address, j).call();
@@ -1205,7 +1229,7 @@ var display = (async function(){
 	
 	//newBtn.id = 'b' + i;
 	newDiv.id = 't'+i + j;
-	chat.appendChild(newDiv);
+	ewDiv.appendChild(newDiv);
 	//chat.appendChild(newBtn);
 	
 	
@@ -1229,7 +1253,7 @@ var display = (async function(){
 	//console.log(obligation)
 	var newDiv = document.createElement('div');
 	newDiv.id = 'v'+i + j;
-	chat.appendChild(newDiv);
+	ewDiv.appendChild(newDiv);
 	
 	
 	
@@ -1253,7 +1277,7 @@ var display = (async function(){
 			 image_ = 'https://ipfs.io/ipfs/' + JSONresult.image.slice(7)
 			}
             img.src = image_
-            chat.appendChild(img);
+            ewDiv.appendChild(img);
 			//chat.setAttribute('width', '15%');
 			//chat.setAttribute('height', '15%');
 	//document.getElementById("vs" + i).src = JSONresult.image;
@@ -1722,18 +1746,17 @@ var approve = (async function(){
 })()
 }
 
-function getvalue(n, q){
+function getName(k){
 //q = $('input[name=drone]:checked').val();	
 	//alert(bal)
 	
 var val = (async function(){
-  var contract_address = await web3.utils.toChecksumAddress("0xd284f2833f82732fe68be0be55ce279e5421bb19")
-  var wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
+  var contract_address = await web3.utils.toChecksumAddress(k)
   var contract_bal = await new web3.eth.Contract(abi, contract_address);
-  var bal = await contract_bal.methods.getHashmap(wallet_address, n).call();
+  var bal = await contract_bal.methods.name.call();
   //alert(bal);
-  //var result = await getvalue()
-  //console.log('Woo done!', result)
+  var result = await getName()
+  console.log('Woo done!', bal)
  
 	
 
