--- a/create_nft_swapx_polygon_live.html
+++ b/create_nft_swapx_polygon_live.html
@@ -1208,7 +1208,7 @@ var display = (async function(){
 	var newDiv = document.createElement('div');
 	newDiv.id = 'ss'+i;
 	chat.appendChild(newDiv);
-	document.getElementById("ss" + i).outerHTML = '<li style="color:grey; font-family: helvetica narrow, sans-serif; font-size:50px position:absolute; top:0; right:200;">&#10553;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp&#10552;</li>'
+	document.getElementById("ss" + i).outerHTML = '<p style="color:grey; font-family: helvetica narrow, sans-serif; font-size:150px position:absolute; top:0; right:200;">&#10553;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&#10552;</p>'
 	var ewDiv = document.createElement('table');
 	
 	chat.appendChild(ewDiv);
